# cosmos-rl

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CMakeLists.txt  Dockerfile  README.md  constraints.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  tools
.github/workflows/: build-and-test.yaml  doc_pages.yaml  doc_pages.yml
configs/deepseek-v3/: moonlight-moe-13b-tp1-sft.toml  moonlight-moe-13b-tp4-sft.toml
configs/gemma/: gemma-1b-fsdp4-sft.toml  gemma-1b-p-fsdp1-r-tp1-grpo.toml  gemma-1b-p-fsdp4-r-tp4-grpo.toml
configs/mistral/: mistral-7b-fsdp4-sft.toml  mistral-7b-p-fsdp1-r-tp1-grpo.toml  mistral-7b-p-fsdp2-r-tp4-grpo.toml
configs/phi/: phi4-14b-fsdp4-sft.toml  phi4-14b-p-fsdp2-r-tp1-grpo.toml  phi4-14b-p-fsdp4-r-tp2-grpo.toml
configs/qwen2-5/: qwen2-5-32b-gsm8k-grpo-fp8.toml  qwen2-5-32b-gsm8k-grpo-p-fp8-r-fp8.toml  qwen2-5-32b-gsm8k-grpo.toml  qwen2-5-32b-gsm8k-p-fsdp2-cp2-tp2-r-tp4-grpo.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-dapo.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-gsm8k.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-math.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-validation.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo.toml  qwen2-5-32b-tp2-fsdp4-sft.toml  qwen2-5-32b-tp8-sft.toml  qwen2-5-3b-p-fsdp1-tp1-r-tp1-pp1-grpo-aipo.toml  qwen2-5-3b-p-fsdp1-tp1-r-tp1-pp1-grpo.toml  qwen2-5-3b-p-fsdp1-tp2-r-n_init_replica-3-tp2-pp1-grpo.toml  qwen2-5-3b-p-fsdp1-tp2-r-tp2-pp1-grpo-profile.toml  qwen2-5-3b-p-fsdp1-tp2-r-tp2-pp1-grpo.toml  qwen2-5-3b-tp1-sft.toml  qwen2-5-3b-tp2-fsdp-sft.toml  qwen2-5-7b-p-fsdp1-tp2-r-tp2-pp1-grpo-vllm-flashinfer.toml  qwen2-5-7b-p-fsdp1-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-fsdp2-cp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp2-pp1-fp8-grpo.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp2-pp1-grpo-fp8.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp4-pp1-grpo.toml  qwen2-5-7b-p-fsdp4-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-pp1-fsdp1-tp2-r-tp1-pp2-grpo.toml  qwen2-5-7b-p-pp2-fsdp1-tp1-r-tp2-pp2-grpo.toml  qwen2-5-7b-p-pp2-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-pp2-tp2-r-tp2-pp2-grpo.toml  qwen2-5-7b-p-tp4-r-tp2-pp1-grpo.toml  qwen2-5-7b-pp2-cp2-sft.toml  qwen2-5-7b-pp2-tp2-sft.toml
configs/qwen3/: qwen3-32b-p-fsdp1-tp8-r-tp4-pp1-grpo.toml  qwen3-32b-tp8-sft.toml  qwen3-8b-p-fsdp1-tp4-fp8-r-tp4-pp1-fp8-grpo.toml  qwen3-8b-p-fsdp1-tp4-r-tp4-pp1-grpo-fp8.toml  qwen3-8b-p-tp4-r-tp2-pp1-grpo.toml
configs/qwen3-moe/: qwen3-moe-30b-fsdp2-tp4-sft.toml  qwen3-moe-30b-p-tp4-r-tp2-grpo-fp8.toml  qwen3-moe-30b-p-tp4-r-tp2-grpo.toml  qwen3-moe-30b-tp4-sft-profile.toml  qwen3-moe-30b-tp4-sft.toml
cosmos_rl/: _cpp.pyi
cosmos_rl/cli/: algo.py  cli.py  custom_group.py  nccl.py  profiler.py  replica.py  utils.py
cosmos_rl/comm/: base.py
cosmos_rl/csrc/: cosmos_rl.cpp  watchdog_tls.cpp
cosmos_rl/dispatcher/: command.py  controller.py  protocol.py  replica.py  run_web_panel.py  status.py
cosmos_rl/launcher/: __init__.py  launch_all.py  launch_controller.sh  launch_replica.sh  worker_entry.py
cosmos_rl/patch/: __init__.py
cosmos_rl/policy/: train.py
cosmos_rl/rollout/: __init__.py  rollout_base.py  rollout_entrance.py
cosmos_rl/utils/: api_suffix.py  attn_util.py  cache.py  checkpoint.py  constant.py  distributed.py  logging.py  modelscope.py  network_util.py  parallelism.py  parallelism_map.py  parallelism_registry.py  profiler.py  pynccl.py  pynccl_wrapper.py  redis_stream.py  ulysses.py  util.py  wandb_logger.py
docs/: README.md  conf.py  index.rst
docs/async/: overview.rst
docs/elastic/: overview.rst
docs/multinodes/: dgxc_lepton.rst  overview.rst  slurm.rst
docs/parallelism/: overview.rst
docs/quantization/: fp8.rst
docs/quickstart/: configuration.rst  customization.rst  dataflow.rst  hf_models_support.rst  installation.rst  single_node_example.rst
tests/: launch_test_worker.py  test_cache.py  test_comm.py  test_context_parallel.py  test_fp8.py  test_grad_allreduce.py  test_high_availability_nccl.py  test_integration.py  test_math_verify.py  test_nccl_collectives.py  test_nccl_timeout.py  test_parallel_map.py  test_policy_to_policy.py  test_policy_to_rollout.py  test_process_flow.py
tests/benchmark/: launch_rollout_bench.sh  rollout_benchmark.py
tests/configs/: grpo_integration_test.toml  sft_integration_test.toml  test_simple_grpo.toml  test_simple_sft.toml
tools/: launch_all.py  launch_controller.sh  launch_replica.sh
(+105 files in other folders)
